import strategy.Vehicle;

public abstract class AllCars extends Vehicle {
    public void allCars() {

        System.out.println("A List of All Cars For Sale:");

    }

    @Override
    public void
}
