package strategy;

public class VintageVehicle implements Driveability {

	public void driveable() {
		System.out.println("Vintage Car is driveable");
	}
}
